syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.buyan.colorgc.protocol.heartbeat";

import "common/Common.proto";

message HeartbeatRequest {
  string serviceName = 1;
  string ip = 2;
  int32 processNo = 3;
}

service HeartbeatService {
  rpc heartbeat (HeartbeatRequest) returns (Empty);
}